--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,8 @@
 
 .editor-panel{
   width: 30vw;
+  height: 100%;
+  overflow-y: auto
 }
 
 #workflow-panel{
@@ -34,7 +36,7 @@
   overflow:auto;
 }
 #mid-panel{
-  width: 100vw; 
+  width: 100%; 
   height: 95vh;
   display: flex;
   flex-direction: row;
