finished darkmode, added centering on changing layout and uploading new workflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,172 @@
 
 #toolbar{
+
+  color: var(--text-primary);
+  background-color: var(--background);
+  display: flex;
+  box-sizing: border-box;
+  border: 2px solid;
+  border-color: var(--border-color);
+  padding: 2px;
+  padding-bottom: 2px;
+  width: 100%;
+}
+
+.generic-button{
+  display: inline-flex;
+  align-items: center;
+  box-sizing: border-box;
+  outline: 1px solid;
+  color: var(--text-primary);
+  background-color: var(--background);
+  cursor: pointer;
+  padding-right: 4px;
+  padding-left: 4px;
+}
+
+.editor-panel{
+  width: 30vw;
+  height: 100%;
+  overflow-y: auto;
+  box-sizing: border-box;
+  padding: 3px;
+}
+
+#workflow-panel{
+  /* background-color: aqua; */
+
+  color: var(--text-primary);
+  background-color: var(--background);
+  width: 70vw;
+}
+
+.App{
+  height: 100vh;
+  width: 100vw;
+  color: var(--text-primary);
+  background-color: var(--background);
+}
+
+#mid-panel{
+  width: 100%; 
+  height: 95vh;
+  display: flex;
+  flex-direction: row;
+
+  color: var(--text-primary);
+  background-color: var(--background);
+}
+
+.editor-panel-outer{
+  border-right: 2px solid black;
+  border-color: var(--border-color);
+}
+
+#jsonview-panel{
+  /* background-color: aliceblue; */
+  
+  color: var(--text-primary);
+  background-color: var(--background);
+  overflow:auto;
+}
+
+#nodes-edges-panel{
+  /* background-color: rgb(184, 215, 243); */
+  
+  color: var(--text-primary);
+  background-color: var(--background);
+  overflow:auto;
+}
+
+
+/* .function-node{
+  height: 40px;
+  width: 160px;
+  border: 1px solid #000000;
+  padding: 5px;
+  border-radius: 10px;
+  background: white;
+} */
+
+.react-flow.light .function-node{
+  height: 40px;
+  width: 160px;
+  border: 1px solid #000000;
+  padding: 5px;
+  border-radius: 10px;
+  border-color: var(--border-color);
+  background: white;
+}
+
+.react-flow.dark .function-node{
+  color: white;
+  height: 40px;
+  width: 160px;
+  border: 1px solid white;
+  padding: 5px;
+  border-radius: 10px;
+  border-color: var(--border-color);
+  background: #000000;
+}
+
+.react-flow.dark .custom-edge path {
+  stroke: white;
+}
+
+.react-flow.light .custom-edge path {
+  stroke: #000000;
+}
+
+
+
+.truncate{
+  display: block;
+  white-space: nowrap;
+  overflow: hidden;         
+  text-overflow: ellipsis;
+  word-break: break-all;
+}
+
+.popup{
+  position: fixed;
+  display: flex;        
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); 
+  z-index: 9999;
+  width: 60vw;
+  height: 40vh;
+  color: var(--text-primary);
+  background-color: var(--background);
+  border-radius: 10px;
+  border-style: ridge;
+  border-color: var(--border-color);
+  padding: 5px;
+}
+
+.list-entry{
+  display : flex;
+  margin-bottom: 1px;  
+  background-color: #f2f2f2;
+  background-color: var(--background);
+  border-color: var(--border-color);
+  border: 2px solid;
+  border-radius: 7px;
+  margin: 1px;
+  padding: 3px;
+}
+
+#test{
+  background-color: var(--background);
+  border-color: var(--border-color);
+}
+
+.generic-label{
+  color: var(--text-primary);
+}
+
+/* 
+#toolbar{
   background-color: white;
   display: flex;
   box-sizing: border-box;
@@ -29,14 +196,16 @@
 }
 
 #workflow-panel{
-  /* background-color: aqua; */
+  background-color: aqua;
   background-color: #f2f2f2;
   width: 70vw;
 }
 
 .App{
   height: 100vh;
-  width: 100vw;  
+  width: 100vw;
+  color: var(--text-primary);
+  background-color: var(--background);
 }
 
 #mid-panel{
@@ -44,7 +213,7 @@
   height: 95vh;
   display: flex;
   flex-direction: row;
-  /* background-color: antiquewhite; */
+  background-color: antiquewhite;
   background-color: white;
 }
 
@@ -71,7 +240,7 @@
   border-radius: 10px;
   background: white;
 } */
-
+/* 
 .react-flow.light .function-node{
   height: 40px;
   width: 160px;
@@ -122,4 +291,4 @@
   border-radius: 10px;
   border-style: ridge;
   padding: 5px;
-}
+} */
