--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,17 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+:root {
+  --background: white;
+  --text-primary: black;
+  --border-color : black;
+  --edge-color: black;
+}
+[data-theme='dark'] {
+  --background: #1e1e1e;
+  --text-primary: #dbdbdb;
+  --border-color: grey;
+  --edge-color: white;
+}
