began refactoring for easier maintainability, stable for FaaSr 2

--- a/src/App.css
+++ b/src/App.css
@@ -156,6 +156,10 @@
   padding: 3px;
 }
 
+.list-entry input {
+  width: 30%;
+}
+
 #test{
   background-color: var(--background);
   border-color: var(--border-color);
