--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@
 
 
 .editor-panel{
-  width: 30vw;
+  width: 100%;
   height: 100%;
   overflow-y: auto;
   box-sizing: border-box;
@@ -50,7 +50,6 @@
 
   color: var(--text-primary);
   background-color: var(--background);
-  width: 70vw;
 }
 
 .App{
@@ -71,8 +70,13 @@
 }
 
 .editor-panel-outer{
-  border-right: 2px solid black;
-  border-color: var(--border-color);
+  flex-grow: 0;
+  flex-shrink: 0;
+  display: flex;
+  flex-direction: row;
+  z-index: 2;
+  min-width: 200px;
+  max-width: 800px;
 }
 
 #jsonview-panel{
@@ -146,7 +150,7 @@
   height: 40vh;
   color: var(--text-primary);
   background-color: var(--background);
-  border-radius: 10px;
+  bo000000adius: 10px;
   border-style: ridge;
   border-color: var(--border-color);
   padding: 5px;
@@ -175,4 +179,14 @@
 
 .generic-label{
   color: var(--text-primary);
+}
+
+.drag-handle {
+
+  min-width: 3px;
+  width: 3px;
+  height: 100%;
+  cursor: col-resize;
+  background-color: var(--border-color);
+  transition: background-color 0.15s ease;
 }
