--- a/src/App.css
+++ b/src/App.css
@@ -178,6 +178,10 @@
 
 .generic-label{
   color: var(--text-primary);
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  margin: 0;
 }
 
 #datastore-editor{
